objects/ssot__DedupEngmtAnlssTextInsight__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeletedAt__c</fullName>
        <label>Deleted At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Dedup Engmt Anlss Txt Insight Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsightType__c</fullName>
        <label>Insight Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LatestEngmtAnlyssGroupingExecutionId__c</fullName>
        <label>Latest Engmt Analysis Grouping Execution</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RepresentativeInsightText__c</fullName>
        <label>Representative Insight</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SummaryText__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1749176960603_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DedupEngmtAnlssTextInsight_LatestEng_rel</label>
        <referenceTo>ssot__EngagementAnalysisGroupingExecution__dlm</referenceTo>
        <relationshipLabel>DedupEngmtAnlssTextInsight_LatestEng_rel</relationshipLabel>
        <relationshipName>rel_1749176960603_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>